<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView android:text="@string/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instructions"
        android:id="@+id/instructions"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"

         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numberToFormat"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instructions"
        android:inputType="numberDecimal"
        android:layout_marginBottom="0dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/decimalMask"
        android:id="@+id/maskInstructions"
        android:layout_above="@+id/decimalMask"
        android:layout_alignParentLeft="true"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/decimalMask"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/maxLengthTitle"
        android:id="@+id/maxLengthTitle"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/decimalMask"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/maxLength"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/maxLengthTitle"
        android:layout_width="match_parent"
        android:inputType="number"
        android:text="10"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30dp" />


</LinearLayout>
